# Alerter

./: .gitignore  CMakeLists.txt
include/: Configurator.h  DependencyInjector.h  OptionTypedData.h  Singleton.h  Thread.h
include/Acquiring/: LocalVideoStreamAcquirer.h  RemoteVideoStreamAcquirer.h  VideoStreamAcquirer.h
include/Acquiring/Interfaces/: VideoStreamAcquirerInt.h
include/Communicating/: BoostSocketSrv.h  Communicator.h  Console.h  SocketSrv.h  StatementFormat.h
include/Communicating/Interfaces/: IOInt.h  LanguageInt.h
include/Interfaces/: WorkerInt.h
include/Performing/: OpenCVPerformer.h  Performer.h
include/Performing/Interfaces/: PerformerInt.h
include/System/: Configurator.h  DependencyInjector.h
include/System/Interfaces/: WorkerInt.h
src/: Configurator.cpp  Main.cpp  OptionTypedData.cpp  Thread.cpp
src/Acquiring/: LocalVideoStreamAcquirer.cpp  RemoteVideoStreamAcquirer.cpp  VideoStreamAcquirer.cpp
src/Communicating/: BoostSocketSrv.cpp  Communicator.cpp  Console.cpp  SocketSrv.cpp  StatementFormat.cpp
src/Performing/: OpenCVPerformer.cpp  Performer.cpp
src/System/: Configurator.cpp  Thread.cpp
